@@ -13,6 +13,7 @@
 * Orbital: Support for stored credentials framework [jknipp] #3117
 * Openpay: Fix for marking successful transaction(s) as failed [jknipp] #3121
 * Braintree: Adds support for transaction_source [molbrown] #3120
+* Blue Snap: Supports Level 2/3 data [molbrown] #3122
 
 == Version 1.90.0 (January 8, 2019)
 * Mercado Pago: Support "gateway" processing mode [curiousepic] #3087
